Clean up in arhitecture and in code