@@ -4,29 +4,24 @@ import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
-import javafx.geometry.Pos;
 import javafx.scene.control.Label;
 import javafx.scene.control.SplitPane;
 import javafx.scene.control.TextField;
-import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
-import javafx.scene.text.TextAlignment;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 import org.example.amadeus.config.AppConfig;
 import org.example.amadeus.config.UiConfig;
-import org.example.amadeus.enums.Emotions;
+import org.example.amadeus.dto.response.InteractionResult;
 import org.example.amadeus.exception.UI.ImageException;
-import org.example.amadeus.service.SpriteService;
-import org.example.amadeus.service.interfaces.MenuService;
+import org.example.amadeus.service.interfaces.AmadeusService;
+import org.example.amadeus.utils.CharacterFrames;
 
 import java.util.Random;
 
-
-
-public class MenuController {
+public class MainMenuController {
 
     @FXML private TextField userInputField;
     @FXML private VBox chatHistoryBox;
@@ -34,17 +29,12 @@ public class MenuController {
     @FXML private StackPane characterImageContainer;
     @FXML private SplitPane mainSplitPane;
 
-    private MenuService menuService;
-    private final SpriteService spriteService;
+    private AmadeusService amadeusFacade;
     private Timeline talkTimeline;
 
     private Stage stage;
     private AppConfig appConfig;
     private UiConfig ui;
-
-    public MenuController() {
-        this.spriteService = new SpriteService();
-    }
 
     @FXML
     public void initialize() {
@@ -52,63 +42,78 @@ public class MenuController {
 
         characterSprite.fitWidthProperty().bind(characterImageContainer.widthProperty());
         characterSprite.setPreserveRatio(true);
-
-        if (!tryLoadSprite()) {
-            showErrorMessageInImageArea();
-        }
     }
 
     public void initData(AppConfig appConfig,
                          Stage stage,
-                         MenuService menuService) {
+                         AmadeusService amadeusFacade) {
 
         this.appConfig = appConfig;
         this.stage = stage;
         this.ui = appConfig.getUi();
-        this.menuService = menuService;
+        this.amadeusFacade = amadeusFacade;
 
         restoreConfigSettings(this.ui);
         setupConfigListeners(this.ui);
-    }
 
+        loadInitialSprite();
+    }
 
     @FXML
     private void handleSendAction() {
         String text = userInputField.getText().trim();
         if (text.isEmpty()) return;
 
-        Label userLog = new Label("[User] : " + text);
-        userLog.getStyleClass().add("user-msg");
-        chatHistoryBox.getChildren().add(userLog);
-
+        appendUserLog(text);
         userInputField.clear();
         userInputField.setDisable(true);
 
-        menuService.sendPromptAsync(text)
-                .thenAccept(llmResponse -> Platform.runLater(() -> {
+        amadeusFacade.processUserPrompt(text)
+                .thenAccept(response -> Platform.runLater(() -> {
                     userInputField.setDisable(false);
                     userInputField.requestFocus();
 
-                    Emotions emotion = Emotions.fromString(llmResponse.emotion());
-                    SpriteService.CharacterFrames frames = spriteService.getFramesForEmotion(emotion);
-
-                    displayResponseWithTypewriter(llmResponse.text(), frames);
+                    displayResponseWithTypewriter(response);
                 }))
                 .exceptionally(throwable -> {
-                    Platform.runLater(() -> {
-                        Label errorLog = new Label("[SYSTEM] : Ошибка получения ответа от Amadeus.");
-                        errorLog.getStyleClass().add("error-msg");
-                        errorLog.setWrapText(true);
-                        chatHistoryBox.getChildren().add(errorLog);
-
-                        userInputField.setDisable(false);
-                        userInputField.requestFocus();
-                    });
+                    Platform.runLater(this::handleSystemError);
                     return null;
                 });
     }
 
-    private void displayResponseWithTypewriter(String text, SpriteService.CharacterFrames frames) {
+    private void loadInitialSprite() {
+        try {
+            CharacterFrames defaultFrames = amadeusFacade.getDefaultFrames();
+            if (defaultFrames != null && defaultFrames.idle() != null) {
+                characterSprite.setImage(defaultFrames.idle());
+            } else {
+                showErrorMessageInImageArea();
+            }
+        } catch (Exception e) {
+            showErrorMessageInImageArea();
+        }
+    }
+
+    private void appendUserLog(String text) {
+        Label userLog = new Label("[User] : " + text);
+        userLog.getStyleClass().add("user-msg");
+        chatHistoryBox.getChildren().add(userLog);
+    }
+
+    private void handleSystemError() {
+        Label errorLog = new Label("[SYSTEM] : Unknown error.");
+        errorLog.getStyleClass().add("sys-msg");
+        errorLog.setWrapText(true);
+        chatHistoryBox.getChildren().add(errorLog);
+
+        userInputField.setDisable(false);
+        userInputField.requestFocus();
+    }
+
+    private void displayResponseWithTypewriter(InteractionResult result) {
+        String text = result.text();
+        CharacterFrames frames = result.frames();
+
         Label aiLog = new Label("[AMADEUS] : ");
         aiLog.getStyleClass().add("ai-msg");
         aiLog.setWrapText(true);
@@ -128,14 +133,11 @@ public class MenuController {
         }));
 
         typewriterTimeline.setCycleCount(text.length());
-
         typewriterTimeline.setOnFinished(event -> stopTalkingAnimation(frames));
-
         typewriterTimeline.play();
     }
 
-
-    private void startTalkingAnimation(SpriteService.CharacterFrames frames) {
+    private void startTalkingAnimation(CharacterFrames frames) {
         stopTalkingAnimation(null);
 
         Random random = new Random();
@@ -152,7 +154,7 @@ public class MenuController {
         talkTimeline.play();
     }
 
-    private void stopTalkingAnimation(SpriteService.CharacterFrames frames) {
+    private void stopTalkingAnimation(CharacterFrames frames) {
         if (talkTimeline != null) {
             talkTimeline.stop();
         }
@@ -161,7 +163,11 @@ public class MenuController {
         }
     }
 
-    private void restoreConfigSettings(UiConfig ui){
+    private void showErrorMessageInImageArea() {
+        characterImageContainer.getChildren().setAll(ImageException.createImageMissingPlaceholder());
+    }
+
+    private void restoreConfigSettings(UiConfig ui) {
         if (!mainSplitPane.getDividers().isEmpty()) {
             mainSplitPane.setDividerPositions(ui.getSplitDividerPosition());
         }
@@ -171,9 +177,9 @@ public class MenuController {
         stage.setMaximized(ui.isMaximized());
     }
 
-    private void setupConfigListeners(UiConfig ui){
+    private void setupConfigListeners(UiConfig ui) {
         if (!mainSplitPane.getDividers().isEmpty()) {
-            mainSplitPane.getDividers().get(0).positionProperty().addListener((obs, oldVal, newVal) -> {
+            mainSplitPane.getDividers().getFirst().positionProperty().addListener((obs, oldVal, newVal) -> {
                 ui.setSplitDividerPosition(newVal.doubleValue());
             });
         }
@@ -189,23 +195,5 @@ public class MenuController {
         stage.maximizedProperty().addListener((obs, oldVal, newVal) -> {
             ui.setMaximized(newVal);
         });
-    }
-
-    private void showErrorMessageInImageArea() {
-        characterImageContainer.getChildren().setAll(ImageException.createImageMissingPlaceholder());
-    }
-
-    private boolean tryLoadSprite() {
-        try {
-            var stream = getClass().getResourceAsStream("/sprites/DEFAULT/DEFAULT_1/default.png"); // TODO: To check if path is valid after deploy
-            if (stream == null) {
-                return false;
-            }
-            Image sprite = new Image(stream);
-            characterSprite.setImage(sprite);
-            return true;
-        } catch (Exception e) {
-            return false;
-        }
     }
 }
